“Search” field keyboard shortcut missing in 4.0

Greetings,
a convenient (though undocumented) shortcut in 3.* was the
ability to directly access the “media library” search field
using Ctrl-K. (Not sure whether it also worked on Windows, though.)
This unfortunately doesn’t appear to work in 4.0. Any chance
of getting it back? :-)

This is not only convenient but also important with regard to
accessibility, as it provide users with an easily-reproducible
context-independent key sequence.