qt: add missing search shortcut

shortcut did exists in VLC 3.0

fix: #25892